tests/ui/parser/macro/macro-keyword.rs
fn macro() {  //~ ERROR expected identifier, found reserved keyword `macro`
}

pub fn main() {
}
